# pixez-flutter

./: .env.example  .gitignore  Caddyfile  docker-compose.portainer.yml  docker-compose.yml
.github/workflows/: build_android.yml  build_server.yml
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/pixez/: index.md  journal-1.md
lib/: main.dart
lib/fluent/page/hello/setting/: setting_page.dart
lib/l10n/: intl_en_US.arb  intl_zh_CN.arb
lib/page/hello/setting/: setting_page.dart
lib/page/sync/: sync_setting_page.dart
lib/sync/: sync_auth_service.dart  sync_config.dart  sync_data_mapper.dart  sync_engine.dart
server/: Cargo.toml  Dockerfile
server/migrations/: 001_init.sql
server/src/: config.rs  db.rs  errors.rs  main.rs
server/src/handlers/: admin.rs  auth.rs  mod.rs  sync.rs
server/src/middleware/: auth.rs
server/src/models/: mod.rs  sync_data.rs  user.rs
server/static/: index.html
server/tests/: integration_test.rs
