[package]
name = "pixez-sync-server"
version = "0.1.0"
edition = "2021"
description = "PixEz data sync server"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
